<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Register">

    <!-- Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Email Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- User Role Selection -->
    <TextView
        android:id="@+id/roleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="10dp"
        android:text="@string/select_role"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center" />

    <RadioGroup
        android:id="@+id/radioGroupRole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/roleText"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioCivilian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/civilian"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioPolice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/police" />

    </RadioGroup>

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupRole"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <!-- Register Button - Initially centered below progress bar -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:backgroundTint="#008080"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/register" />

    <!-- Login Now Text -->
    <TextView
        android:id="@+id/LoginNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/click_to_login2"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>